<resources>
    <string name="app_name">VolcanApp</string>
    <string name="title_home">Home</string>
    <string name="title_mapa">Mapa</string>
    <string name="title_boton_panico">Botón Pánico</string>
    <string name="title_recomedaciones">Recomedaciones</string>
    <string name="title_usuario">Usuario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>