<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.volcanapp.volcanapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_mapa"
        android:name="com.volcanapp.volcanapp.ui.mapa.MapaFragment"
        android:label="@string/title_mapa"
        tools:layout="@layout/fragment_mapa" />
    <fragment
        android:id="@+id/navigation_botonPanico"
        android:name="com.volcanapp.volcanapp.ui.boton_panico.BotonPanicoFragment"
        android:label="@string/title_boton_panico"
        tools:layout="@layout/fragment_boton_panico" />
    <fragment
        android:id="@+id/navigation_recomedaciones"
        android:name="com.volcanapp.volcanapp.ui.recomendaciones.RecomedacionesFragment"
        android:label="@string/title_recomedaciones"
        tools:layout="@layout/fragment_recomedaciones" />
    <fragment
        android:id="@+id/navigation_usuario"
        android:name="com.volcanapp.volcanapp.ui.usuario.UsuarioFragment"
        android:label="@string/title_usuario"
        tools:layout="@layout/fragment_usuario" />

</navigation>